--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4    John Fiedler       689845    4,360,000  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "(1000, 16)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -416,6 +416,32 @@
    ],
    "source": [
     "recomend_me_bis('Crime with Leonardo DiCaprio')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There Will Be Blood\n",
+      "A story of family, religion, hatred, oil and madness, focusing on a turn-of-the-century prospector in the early days of the business.  Drama  Paul Thomas Anderson Daniel Day-Lewis Paul Dano Ciarán Hinds Martin Stringer\n",
+      "Darbareye Elly\n",
+      "The mysterious disappearance of a kindergarten teacher during a picnic in the north of Iran is followed by a series of misadventures for her fellow travelers.  Drama, Mystery  Asghar Farhadi Golshifteh Farahani Shahab Hosseini Taraneh Alidoosti Merila Zare'i\n",
+      "Swades: We, the People\n",
+      "A successful Indian scientist returns to an Indian village to take his nanny to America with him and in the process rediscovers his roots.  Drama  Ashutosh Gowariker Shah Rukh Khan Gayatri Joshi Kishori Ballal Smit Sheth\n",
+      "M.S. Dhoni: The Untold Story\n",
+      "The untold story of Mahendra Singh Dhoni's journey from ticket collector to trophy collector - the world-cup-winning captain of the Indian Cricket Team.  Biography, Drama, Sport  Neeraj Pandey Sushant Singh Rajput Kiara Advani Anupam Kher Disha Patani\n",
+      "Das Boot\n",
+      "The claustrophobic world of a WWII German U-boat; boredom, filth and sheer terror.  Adventure, Drama, Thriller  Wolfgang Petersen Jürgen Prochnow Herbert Grönemeyer Klaus Wennemann Hubertus Bengsch\n"
+     ]
+    }
+   ],
+   "source": [
+    "recomend_me_bis('Fun and exciting with adventure')"
    ]
   }
  ],
