prompting and openAI API

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,17 @@
     "import torch\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import PorterStemmer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +231,7 @@
        "4    John Fiedler       689845    4,360,000  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +251,7 @@
        "(1000, 16)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +280,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/gillesdeknache/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/gillesdeknache/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Initialize Porter Stemmer and stopwords\n",
+    "stemmer = PorterStemmer()\n",
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_text(text):\n",
+    "    # Tokenize text\n",
+    "    tokens = word_tokenize(text)\n",
+    "    \n",
+    "    # Remove punctuation and stopwords, and apply stemming\n",
+    "    processed_tokens = [stemmer.stem(word.lower()) for word in tokens if word.isalnum() and word.lower() not in stop_words]\n",
+    "    \n",
+    "    # Join the tokens back into a single string\n",
+    "    return ' '.join(processed_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessed_plots = [preprocess_text(plot) for plot in plots]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'two imprison men bond number year find solac eventu redempt act common decenc drama frank darabont tim robbin morgan freeman bob gunton william sadler'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessed_plots[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,17 +378,19 @@
     "tfidf_vectorizer = TfidfVectorizer()\n",
     "\n",
     "# Fit the vectorizer to the documents and transform them into TF-IDF vectors\n",
-    "tfidf = tfidf_vectorizer.fit_transform(plots)"
+    "tfidf = tfidf_vectorizer.fit_transform(preprocessed_plots)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def recomend_me(query,top_k = 5):\n",
-    "    tfidf_query = tfidf_vectorizer.transform([query])\n",
+    "    preprocessed_query = preprocess_text(query)\n",
+    "\n",
+    "    tfidf_query = tfidf_vectorizer.transform([preprocessed_query])\n",
     "\n",
     "    cos_similarities = cosine_similarity(tfidf_query,tfidf)\n",
     "\n",
@@ -307,28 +404,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Departed\n",
-      "An undercover cop and a mole in the police attempt to identify each other while infiltrating an Irish gang in South Boston.  Crime, Drama, Thriller  Martin Scorsese Leonardo DiCaprio Matt Damon Jack Nicholson Mark Wahlberg\n",
       "The Wolf of Wall Street\n",
       "Based on the true story of Jordan Belfort, from his rise to a wealthy stock-broker living the high life to his fall involving crime, corruption and the federal government.  Biography, Crime, Drama  Martin Scorsese Leonardo DiCaprio Jonah Hill Margot Robbie Matthew McConaughey\n",
+      "The Departed\n",
+      "An undercover cop and a mole in the police attempt to identify each other while infiltrating an Irish gang in South Boston.  Crime, Drama, Thriller  Martin Scorsese Leonardo DiCaprio Matt Damon Jack Nicholson Mark Wahlberg\n",
+      "Shutter Island\n",
+      "In 1954, a U.S. Marshal investigates the disappearance of a murderer who escaped from a hospital for the criminally insane.  Mystery, Thriller  Martin Scorsese Leonardo DiCaprio Emily Mortimer Mark Ruffalo Ben Kingsley\n",
       "Titanic\n",
       "A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.  Drama, Romance  James Cameron Leonardo DiCaprio Kate Winslet Billy Zane Kathy Bates\n",
-      "Django Unchained\n",
-      "With the help of a German bounty hunter, a freed slave sets out to rescue his wife from a brutal Mississippi plantation owner.  Drama, Western  Quentin Tarantino Jamie Foxx Christoph Waltz Leonardo DiCaprio Kerry Washington\n",
-      "Shutter Island\n",
-      "In 1954, a U.S. Marshal investigates the disappearance of a murderer who escaped from a hospital for the criminally insane.  Mystery, Thriller  Martin Scorsese Leonardo DiCaprio Emily Mortimer Mark Ruffalo Ben Kingsley\n"
+      "Inception\n",
+      "A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a C.E.O.  Action, Adventure, Sci-Fi  Christopher Nolan Leonardo DiCaprio Joseph Gordon-Levitt Elliot Page Ken Watanabe\n"
      ]
     }
    ],
    "source": [
-    "recomend_me('Crime with Leonardo DiCaprio')"
+    "recomend_me('Crime movie with Leonardo DiCaprio')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batman Begins\n",
+      "After training with his mentor, Batman begins his fight to free crime-ridden Gotham City from corruption.  Action, Adventure  Christopher Nolan Christian Bale Michael Caine Ken Watanabe Liam Neeson\n",
+      "Interstellar\n",
+      "A team of explorers travel through a wormhole in space in an attempt to ensure humanity's survival.  Adventure, Drama, Sci-Fi  Christopher Nolan Matthew McConaughey Anne Hathaway Jessica Chastain Mackenzie Foy\n",
+      "Memento\n",
+      "A man with short-term memory loss attempts to track down his wife's murderer.  Mystery, Thriller  Christopher Nolan Guy Pearce Carrie-Anne Moss Joe Pantoliano Mark Boone Junior\n",
+      "Inception\n",
+      "A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a C.E.O.  Action, Adventure, Sci-Fi  Christopher Nolan Leonardo DiCaprio Joseph Gordon-Levitt Elliot Page Ken Watanabe\n",
+      "The Dark Knight Rises\n",
+      "Eight years after the Joker's reign of anarchy, Batman, with the help of the enigmatic Catwoman, is forced from his exile to save Gotham City from the brutal guerrilla terrorist Bane.  Action, Adventure  Christopher Nolan Christian Bale Tom Hardy Anne Hathaway Gary Oldman\n"
+     ]
+    }
+   ],
+   "source": [
+    "recomend_me(\"Adventure movie with Christopher Nolan\")"
    ]
   },
   {
@@ -442,6 +565,300 @@
    ],
    "source": [
     "recomend_me_bis('Fun and exciting with adventure')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sbert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a30990bb81b24a71845124141e31c460",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading modules.json:   0%|          | 0.00/229 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "32641a1cec3444d08f7e9566f297ef2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)ce_transformers.json:   0%|          | 0.00/122 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "00043f29dd7d401c99ed6eda644a363a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading README.md:   0%|          | 0.00/3.73k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6825ecc95804738a96d759994ba64a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)nce_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9e0d14d1bae40e4bfd06be5048ca95f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading config.json:   0%|          | 0.00/629 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bfaf5442ce56493eb5b62409bdc2a285",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading pytorch_model.bin:   0%|          | 0.00/90.9M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8fd46d1105934c9fb510410be26d76a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading tokenizer_config.json:   0%|          | 0.00/314 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "742fd16394f44b6391e1abdaaacfdbd6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4d6eaa0b38d4703b8735c3dad6bf8ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "44aa232dc815421dbb1e2b6a569015c9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f4bb1d97714d4bf98784d30fa2261859",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading 1_Pooling/config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "model = SentenceTransformer('paraphrase-MiniLM-L6-v2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sentences are encoded by calling model.encode()\n",
+    "embedding_plots = model.encode(plots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recomend_me_sbert(query,top_k = 1):\n",
+    "    movie_name = []\n",
+    "    movie_plot = []\n",
+    "    encoded_query = model.encode(query)\n",
+    "    cos_similarities = cosine_similarity(encoded_query.reshape(1, -1),embedding_plots)\n",
+    "\n",
+    "    sorted_idx = np.argsort(cos_similarities.squeeze())\n",
+    "\n",
+    "    for idx in reversed(sorted_idx[-top_k:]):\n",
+    "        movie_name.append(df.loc[idx]['Series_Title'])\n",
+    "        movie_plot.append(plots[idx])\n",
+    "\n",
+    "    return movie_name,movie_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(384,)\n",
+      "(1000, 384)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(['Shrek'],\n",
+       " ['A mean lord exiles fairytale creatures to the swamp of a grumpy ogre, who must go on a quest and rescue a princess for the lord in order to get his land back.  Animation, Adventure, Comedy  Andrew Adamson Vicky Jenson Mike Myers Eddie Murphy Cameron Diaz'])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recomend_me_sbert(\"Adventure and Comedy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(384,)\n",
+      "(1000, 384)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(['Mystic River'],\n",
+       " ['The lives of three men who were childhood friends are shattered when one of them has a family tragedy.  Crime, Drama, Mystery  Clint Eastwood Sean Penn Tim Robbins Kevin Bacon Emmy Rossum'])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recomend_me_sbert(\"Something that makes me cry\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stagecoach\n",
+      "A group of people traveling on a stagecoach find their journey complicated by the threat of Geronimo and learn something about each other in the process.  Adventure, Drama, Western  John Ford John Wayne Claire Trevor Andy Devine John Carradine\n",
+      "Fight Club\n",
+      "An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.  Drama  David Fincher Brad Pitt Edward Norton Meat Loaf Zach Grenier\n",
+      "Watchmen\n",
+      "In 1985 where former superheroes exist, the murder of a colleague sends active vigilante Rorschach into his own sprawling investigation, uncovering something that could completely change the course of history as we know it.  Action, Drama, Mystery  Zack Snyder Jackie Earle Haley Patrick Wilson Carla Gugino Malin Akerman\n",
+      "The Peanut Butter Falcon\n",
+      "Zak runs away from his care home to make his dream of becoming a wrestler come true.  Adventure, Comedy, Drama  Tyler Nilson Michael Schwartz Zack Gottsagen Ann Owens Dakota Johnson\n",
+      "The Straight Story\n",
+      "An old man makes a long journey by lawnmower to mend his relationship with an ill brother.  Biography, Drama  David Lynch Richard Farnsworth Sissy Spacek Jane Galloway Heitz Joseph A. Carpenter\n"
+     ]
+    }
+   ],
+   "source": [
+    "recomend_me(\"Something that makes me cry\")"
    ]
   }
  ],
